2019-08-27

** CHANGE **
- New helper methods for en-/decryption (CryptoUtil.vb)