@@ -1,3 +1,8 @@
+2020-10-13
+
+** CHANGE **
+- New StringUtil method: DateYMD
+
 2019-08-27
 
 ** CHANGE **
